--- a/email_tests/pytest.ini
+++ b/email_tests/pytest.ini
@@ -1,4 +1,2 @@
-;[pytest]
-;bdd_features_base_dir = features
-# Run firefox with UI
-;addopts = --headed --browser firefox --full-trace
+[pytest]
+adopts = -s -v
