--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 playwright==1.39.0
-pytest-playwright=0.4.3
+pytest-playwright==0.4.3
 pytest==6.2.5
 pytest-pythonpath==0.7.4
 pytest-bdd==7.0.0
 robotframework-browser==18.0.0
+python-dotenv==1.0.0
