feat: update .gitignore and add pylint configuration

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ config.env
 /.idea/inspectionProfiles/profiles_settings.xml
 /.idea/inspectionProfiles/Project_Default.xml
 /.idea/vcs.xml
+.venv
+.vscode
+*.cpython*
