--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ pytest-bdd==7.0.0
 robotframework-browser==18.0.0
 python-dotenv==1.0.0
 pylint == 3.3.3
+pytest-deadfixtures == 2.2.1
 
 sphinx == 7.2.6
 sphinx_rtd_theme == 2.0.0
