feat: update testing documentation and requirements; add new BDD test cases and remove obsolete files

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /robot_framework/playwright-log.txt
 /robot_framework/report.html
 config.env
+reports
 /.idea/.gitignore
 /.idea/misc.xml
 /.idea/modules.xml
