--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 playwright==1.39.0
 pytest-playwright==0.4.3
-pytest==6.2.5
-pytest-pythonpath==0.7.4
+pytest>=7.0.0,<8.0.0
 pytest-bdd==7.0.0
 robotframework-browser==18.0.0
 python-dotenv==1.0.0
@@ -11,3 +10,6 @@ pytest-deadfixtures == 2.2.1
 sphinx == 7.2.6
 sphinx_rtd_theme == 2.0.0
 sphinx_copybutton == 0.5.2
+pytest-html==4.1.1
+pytest-cov == 4.1.0
+pytest-metadata==3.1.1 
