--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,10 +1,10 @@
 # Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: Deploy Sphinx Docs to Pages
 
 on:
-  # Runs on pushes targeting the default branch
+  # Runs on pushes targeting the main branch
   push:
-    branches: ["master"]
+    branches: ["main"]  # Change this to "main" or your default branch
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -31,13 +31,23 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
+      - name: Set up Python 3.x
+        uses: actions/setup-python@v5  # Use the latest version of setup-python
+        with:
+          python-version: "3.x"
+      - name: Install dependencies
+        run: |
+          pip install -r docs/requirements.txt  # Install Sphinx and any extensions
+          pip install Sphinx  # Ensure Sphinx is installed
+      - name: Build Sphinx documentation
+        run: |
+          cd docs
+          make html
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
-          path: '.'
+          # Upload the built documentation from the _build/html directory
+          path: 'docs/_build' # Change this to 'docs/_build'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
