--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -6,6 +6,9 @@ on:
   push:
     branches: ["main"]  # Change this to "main" or your default branch
 
+  pull_request:
+    branches: [ "main" ]  # Runs on pull requests targeting the main branch  
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
