--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,4 +1,4 @@
-# Simple workflow for deploying static content to GitHub Pages
+# Simple workflow for deploying Sphinx documentation to GitHub Pages
 name: Deploy Sphinx Docs to Pages
 
 on:
@@ -7,7 +7,7 @@ on:
     branches: ["main"]  # Change this to "main" or your default branch
 
   pull_request:
-    branches: [ "main" ]  # Runs on pull requests targeting the main branch  
+    branches: [ "main" ]  # Runs on pull requests targeting the main branch
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -50,7 +50,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload the built documentation from the _build/html directory
-          path: 'doc/_build' # Change this to 'docs/_build'
+          path: 'docs/_build/html'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
