--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -34,6 +34,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Disable Jekyll
+        run: |
+          touch docs/.nojekyll
       - name: Set up Python 3.x
         uses: actions/setup-python@v5  # Use the latest version of setup-python
         with:
@@ -41,12 +44,16 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r docs/requirements.txt  # Install Sphinx and any extensions
-          pip install Sphinx  # Ensure Sphinx is installed
+          pip install sphinx sphinx_rtd_theme
       - name: Build Sphinx documentation
         run: |
           cd docs
           make html
+          # Debug information
+          ls -la _build/html/
           test -f _build/html/index.html || { echo "Build failed - index.html not found"; exit 1; }
+          # Copy .nojekyll to the build directory to ensure GitHub Pages doesn't process with Jekyll
+          cp .nojekyll _build/html/
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
