--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -44,6 +44,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r docs/requirements.txt
           pip install sphinx sphinx_rtd_theme sphinx_copybutton
+          pip install python-dotenv
           pip install playwright
           pip install robotframework
 
